# template-rust-webserver

./: LICENSE  flake.nix
main/: Cargo.toml
main/src/: handlers.rs  main.rs
main/tests/: handler_test.rs
