[package]
name = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"
# redis = { version = "0.25", features = ["tokio-comp"] }
# sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"] }
# uuid = { version = "1", features = ["serde", "v4"] }
# chrono = { version = "0.4", features = ["serde"] }
# dotenvy = "0.15"
# thiserror = "1.0"
# tracing = "0.1"
# tracing-subscriber = "0.3"
tower = "0.5.2"

# [dev-dependencies]
# hyper = "1"